# mesh_decomp

./: CMakeLists.txt  vcpkg.json
assets/: cube.ply
src/: CMakeLists.txt  decomp.cpp  decomp.h  geometry.cpp  geometry.h  graph.cpp  graph.h  main.cpp  mesh.cpp  mesh.h
